syntax = "proto3";
package user;

option go_package = "/;pb";

// Users Service
service Users {
  // GetUsers
  rpc GetUsers(EmptyReq) returns (GetUsersResponse) {};
  rpc Sample(EmptyReq) returns (stream SampleResponse) {};
}

// EmptyReq message
message EmptyReq {}

// GetUsersResponse message
message GetUsersResponse {
  // User message
  repeated User users = 1;
}

message SampleResponse {
  int32 id = 1;
}

// User message
message User {
  // The user name
  string name = 1;
  // The user age
  int32 age = 2;
}